# parlab

./: .gitignore  README.md
ex1/: makefile
ex1/FW-serial/: fw.c  fw.c.docx  fw_sr_sections.c  fw_sr_tasks.c  fw_tl_parallel_for.c  fw_tl_parallel_tasks.c
ex1/report/: Interim.docx  Lab 1 Report.docx
ex1/results/: Run.csv  Run.xlsx  Run_FW.out  fw_simple.csv  sr.csv  sr_sect.csv  sr_tasks.csv  tiled.csv  tiled_par.csv  tiled_tasks.csv
ex1/scripts/: FW_run_on_queue.sh  make_on_queue.sh  run_on_queue_openmp.sh  show_cache.sh
ex1/src/: Game_Of_Life_Parallel.c  Game_Of_Life_Serial.c
ex2/: plotter.py
ex2/mpi/: gauss_mpi_conv.c  gauss_seidel_mpi_NO_conv.c  gauss_seidel_mpi_conv.c  jacobi_mpi.c  jacobi_mpi_NO_conv.c  makefile  red_black_mpi_NO_conv.c  red_black_mpi_conv.c  utils.c  (+2 more)
ex3/z2/: CMakeLists.txt  Makefile  array_lock.c  main.c  plotter.py  pthread_lock.c  run_on_queue.sh  tas_lock.c  test.c  ttas_lock.c
ex3/z2/results/: array.csv  nosync.csv  pthread.csv  tas.csv  truncated_results.out  ttas.csv  z2_locks.out
ex3/z2/scripts/: make_on_queue.sh  run_on_queue.sh
ex3/z3/: CMakeLists.txt  Makefile  ll_fgl.c  ll_lazy.c  ll_nb.c  ll_opt.c  main.c  old_ll_opt.c  plotter.py  test.c
ex3/z3/results/: fgl.csv  fgl20_40_40.csv  fgl80_10_10.csv  lazy.csv  lazy20_40_40.csv  lazy80_10_10.csv  locks.csv  nb.csv  nb20_40_40.csv  nb80_10_10.csv  opt.csv  opt20_40_40.csv  opt80_10_10.csv  serial.csv  serial20_40_40.csv  serial80_10_10.csv
ex3/z3/scripts/: make_on_queue.sh  run_on_queue.sh  test_run.sh
ex4/: get_GPU_details.out
lab_guide/: make_mpi_helloworld.err
(+70 files in other folders)
